--- a/EXPRESS_STATIC_FILES/sitemap.html
+++ b/EXPRESS_STATIC_FILES/sitemap.html
@@ -15,13 +15,13 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="https://3000-e88bf14a-fc41-4987-a942-9f1d585cc6da.ws-eu01.gitpod.io/">HOME</span></a>
+                        <a class="nav-link" href="/">HOME</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="https://3000-e88bf14a-fc41-4987-a942-9f1d585cc6da.ws-eu01.gitpod.io/about">ABOUT</a>
+                        <a class="nav-link" href="/about">ABOUT</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="https://3000-e88bf14a-fc41-4987-a942-9f1d585cc6da.ws-eu01.gitpod.io/sitemap">SITEMAP<span class="sr-only">(current)</span></a>
+                        <a class="nav-link active" href="/sitemap">SITEMAP<span class="sr-only">(current)</span></a>
                     </li>
                 </ul>
             </div>
